# OOP-labs

./: Lab1.cpp  Lab2.cpp  README.md
Lab3/: BrownianMotion.cpp  BrownianMotion.h  CMakeLists.txt  Delone.cpp  Delone.h  Functions.cpp  Functions.h  Vector.cpp  Vector.h  main.cpp
